--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
 		<module>jersey.json</module>
 		<module>jersey.spring</module>
 		<module>jersey.springapp</module>
+		<module>jersey.netty</module>
 	</modules>
 </project>
